🐛 [jagfx] #21 fix the display of current gear in automatic shifter type

--- a/src/dashboards/jagfx/assets/scss/navigation/_truck-gear.scss
+++ b/src/dashboards/jagfx/assets/scss/navigation/_truck-gear.scss
@@ -26,8 +26,8 @@
 		color: #000;*/
 		font-size: 2rem;
 		padding: 0.3rem;
-		width: 3.5rem;
-		line-height: 1rem;
+		width: 5rem;
+		line-height: 2rem;
 		//height: 3.5rem;
 		color: $cWhiteGray;
 	}
